fix：修改说明